[gd_scene load_steps=5 format=3 uid="uid://bq41ciprryn2m"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_3o25e"]
[ext_resource type="Texture2D" uid="uid://rxad0gq1k37s" path="res://art/spritesforgamefr/assasin.png" id="1_4tju4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cerh2"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wo73h"]
radius = 16.0139

[node name="enemy_char" type="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cerh2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4tju4")
script = ExtResource("1_3o25e")

[node name="hitbox" type="Area2D" parent="Sprite2D" groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/hitbox"]
shape = SubResource("CircleShape2D_wo73h")

[node name="Stunned" type="Timer" parent="Sprite2D"]
wait_time = 0.2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Sprite2D"]

[node name="music_stun_timer" type="Timer" parent="Sprite2D"]
wait_time = 5.0

[node name="mogged" type="Timer" parent="Sprite2D"]
wait_time = 2.0

[connection signal="area_entered" from="Sprite2D/hitbox" to="Sprite2D" method="_on_hitbox_area_entered" flags=18]
[connection signal="timeout" from="Sprite2D/Stunned" to="Sprite2D" method="_on_stunned_timeout" flags=18]
[connection signal="screen_exited" from="Sprite2D/VisibleOnScreenNotifier2D" to="Sprite2D" method="_on_visible_on_screen_notifier_2d_screen_exited" flags=18]
[connection signal="timeout" from="Sprite2D/music_stun_timer" to="Sprite2D" method="_on_music_stun_timer_timeout" flags=18]
[connection signal="timeout" from="Sprite2D/mogged" to="Sprite2D" method="_on_mogged_timeout" flags=18]
